validator/grammar/validator_parser.go
// Code generated from ./validator/grammar/VALIDATOR.g4 by ANTLR 4.13.2. DO NOT EDIT.

package grammar // VALIDATOR
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type VALIDATORParser struct {
	*antlr.BaseParser
}

var VALIDATORParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func validatorParserInit() {
	staticData := &VALIDATORParserStaticData
	staticData.LiteralNames = []string{
		"", "'.'", "'msg:'", "'sprintf'", "'>'", "'>='", "'<'", "'<='", "'=='",
		"'!='", "'+'", "'-'", "'*'", "'/'", "'%'", "':'", "';'", "','", "'$'",
		"'this'", "'nil'", "", "'&&'", "'||'", "'('", "')'", "'['", "']'", "'?'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "GT", "EGT", "LT", "ELT", "EQ", "NOTEQ", "PLUS", "MINUS",
		"ASTERISK", "SLASH", "MODULO", "COLON", "SEMICOLON", "COMMA", "SELF",
		"THIS", "NIL", "VAR", "AND", "OR", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS",
		"LEFT_BRACKET", "RIGHT_BRACKET", "QUESTION_MARK", "STRING", "INTEGER_VALUE",
		"DOUBLE_VALUE", "WS",
	}
	staticData.RuleNames = []string{
		"validator", "expr", "andExpr", "conditionalExpr", "comparingExpr",
		"addingExpr", "multiplyingExpr", "factor", "value", "constant", "func",
		"funcArgs", "funcName", "selectorHead", "selectorBody", "bracketSelector",
		"exprSelector", "fieldExpr", "msg", "sprintf", "sprintfArgs", "compareOperator",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// VALIDATORParserInit initializes any static state used to implement VALIDATORParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewVALIDATORParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func VALIDATORParserInit() {
	staticData := &VALIDATORParserStaticData
	staticData.once.Do(validatorParserInit)
}

// NewVALIDATORParser produces a new parser instance for the optional input antlr.TokenStream.
func NewVALIDATORParser(input antlr.TokenStream) *VALIDATORParser {
	VALIDATORParserInit()
	this := new(VALIDATORParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &VALIDATORParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "VALIDATOR.g4"

	return this
}

// VALIDATORParser tokens.
const (
	VALIDATORParserEOF               = antlr.TokenEOF
	VALIDATORParserT__0              = 1
	VALIDATORParserT__1              = 2
	VALIDATORParserT__2              = 3
	VALIDATORParserGT                = 4
	VALIDATORParserEGT               = 5
	VALIDATORParserLT                = 6
	VALIDATORParserELT               = 7
	VALIDATORParserEQ                = 8
	VALIDATORParserNOTEQ             = 9
	VALIDATORParserPLUS              = 10
	VALIDATORParserMINUS             = 11
	VALIDATORParserASTERISK          = 12
	VALIDATORParserSLASH             = 13
	VALIDATORParserMODULO            = 14
	VALIDATORParserCOLON             = 15
	VALIDATORParserSEMICOLON         = 16
	VALIDATORParserCOMMA             = 17
	VALIDATORParserSELF              = 18
	VALIDATORParserTHIS              = 19
	VALIDATORParserNIL               = 20
	VALIDATORParserVAR               = 21
	VALIDATORParserAND               = 22
	VALIDATORParserOR                = 23
	VALIDATORParserLEFT_PARENTHESIS  = 24
	VALIDATORParserRIGHT_PARENTHESIS = 25
	VALIDATORParserLEFT_BRACKET      = 26
	VALIDATORParserRIGHT_BRACKET     = 27
	VALIDATORParserQUESTION_MARK     = 28
	VALIDATORParserSTRING            = 29
	VALIDATORParserINTEGER_VALUE     = 30
	VALIDATORParserDOUBLE_VALUE      = 31
	VALIDATORParserWS                = 32
)

// VALIDATORParser rules.
const (
	VALIDATORParserRULE_validator       = 0
	VALIDATORParserRULE_expr            = 1
	VALIDATORParserRULE_andExpr         = 2
	VALIDATORParserRULE_conditionalExpr = 3
	VALIDATORParserRULE_comparingExpr   = 4
	VALIDATORParserRULE_addingExpr      = 5
	VALIDATORParserRULE_multiplyingExpr = 6
	VALIDATORParserRULE_factor          = 7
	VALIDATORParserRULE_value           = 8
	VALIDATORParserRULE_constant        = 9
	VALIDATORParserRULE_func            = 10
	VALIDATORParserRULE_funcArgs        = 11
	VALIDATORParserRULE_funcName        = 12
	VALIDATORParserRULE_selectorHead    = 13
	VALIDATORParserRULE_selectorBody    = 14
	VALIDATORParserRULE_bracketSelector = 15
	VALIDATORParserRULE_exprSelector    = 16
	VALIDATORParserRULE_fieldExpr       = 17
	VALIDATORParserRULE_msg             = 18
	VALIDATORParserRULE_sprintf         = 19
	VALIDATORParserRULE_sprintfArgs     = 20
	VALIDATORParserRULE_compareOperator = 21
)

// IValidatorContext is an interface to support dynamic dispatch.
type IValidatorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Expr() IExprContext
	EOF() antlr.TerminalNode
	SEMICOLON() antlr.TerminalNode
	Msg() IMsgContext

	// IsValidatorContext differentiates from other interfaces.
	IsValidatorContext()
}

type ValidatorContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValidatorContext() *ValidatorContext {
	var p = new(ValidatorContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_validator
	return p
}

func InitEmptyValidatorContext(p *ValidatorContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_validator
}

func (*ValidatorContext) IsValidatorContext() {}

func NewValidatorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValidatorContext {
	var p = new(ValidatorContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VALIDATORParserRULE_validator

	return p
}

func (s *ValidatorContext) GetParser() antlr.Parser { return s.parser }

func (s *ValidatorContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ValidatorContext) EOF() antlr.TerminalNode {
	return s.GetToken(VALIDATORParserEOF, 0)
}

func (s *ValidatorContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(VALIDATORParserSEMICOLON, 0)
}

func (s *ValidatorContext) Msg() IMsgContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMsgContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMsgContext)
}

func (s *ValidatorContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValidatorContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ValidatorContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.EnterValidator(s)
	}
}

func (s *ValidatorContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.ExitValidator(s)
	}
}

func (s *ValidatorContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VALIDATORVisitor:
		return t.VisitValidator(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VALIDATORParser) Validator() (localctx IValidatorContext) {
	localctx = NewValidatorContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, VALIDATORParserRULE_validator)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Expr()
	}
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == VALIDATORParserSEMICOLON {
		{
			p.SetState(45)
			p.Match(VALIDATORParserSEMICOLON)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(46)
			p.Msg()
		}

	}
	{
		p.SetState(49)
		p.Match(VALIDATORParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExprContext is an interface to support dynamic dispatch.
type IExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AndExpr() IAndExprContext
	OR() antlr.TerminalNode
	Expr() IExprContext

	// IsExprContext differentiates from other interfaces.
	IsExprContext()
}

type ExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExprContext() *ExprContext {
	var p = new(ExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_expr
	return p
}

func InitEmptyExprContext(p *ExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_expr
}

func (*ExprContext) IsExprContext() {}

func NewExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExprContext {
	var p = new(ExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VALIDATORParserRULE_expr

	return p
}

func (s *ExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ExprContext) AndExpr() IAndExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAndExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAndExprContext)
}

func (s *ExprContext) OR() antlr.TerminalNode {
	return s.GetToken(VALIDATORParserOR, 0)
}

func (s *ExprContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.EnterExpr(s)
	}
}

func (s *ExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.ExitExpr(s)
	}
}

func (s *ExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VALIDATORVisitor:
		return t.VisitExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VALIDATORParser) Expr() (localctx IExprContext) {
	localctx = NewExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, VALIDATORParserRULE_expr)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.AndExpr()
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == VALIDATORParserOR {
		{
			p.SetState(52)
			p.Match(VALIDATORParserOR)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(53)
			p.Expr()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAndExprContext is an interface to support dynamic dispatch.
type IAndExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ConditionalExpr() IConditionalExprContext
	AND() antlr.TerminalNode
	AndExpr() IAndExprContext

	// IsAndExprContext differentiates from other interfaces.
	IsAndExprContext()
}

type AndExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAndExprContext() *AndExprContext {
	var p = new(AndExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_andExpr
	return p
}

func InitEmptyAndExprContext(p *AndExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_andExpr
}

func (*AndExprContext) IsAndExprContext() {}

func NewAndExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AndExprContext {
	var p = new(AndExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VALIDATORParserRULE_andExpr

	return p
}

func (s *AndExprContext) GetParser() antlr.Parser { return s.parser }

func (s *AndExprContext) ConditionalExpr() IConditionalExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConditionalExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConditionalExprContext)
}

func (s *AndExprContext) AND() antlr.TerminalNode {
	return s.GetToken(VALIDATORParserAND, 0)
}

func (s *AndExprContext) AndExpr() IAndExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAndExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAndExprContext)
}

func (s *AndExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AndExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AndExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.EnterAndExpr(s)
	}
}

func (s *AndExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.ExitAndExpr(s)
	}
}

func (s *AndExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VALIDATORVisitor:
		return t.VisitAndExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VALIDATORParser) AndExpr() (localctx IAndExprContext) {
	localctx = NewAndExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, VALIDATORParserRULE_andExpr)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.ConditionalExpr()
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == VALIDATORParserAND {
		{
			p.SetState(57)
			p.Match(VALIDATORParserAND)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(58)
			p.AndExpr()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConditionalExprContext is an interface to support dynamic dispatch.
type IConditionalExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ComparingExpr() IComparingExprContext
	QUESTION_MARK() antlr.TerminalNode
	Expr() IExprContext
	COLON() antlr.TerminalNode
	ConditionalExpr() IConditionalExprContext

	// IsConditionalExprContext differentiates from other interfaces.
	IsConditionalExprContext()
}

type ConditionalExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConditionalExprContext() *ConditionalExprContext {
	var p = new(ConditionalExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_conditionalExpr
	return p
}

func InitEmptyConditionalExprContext(p *ConditionalExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_conditionalExpr
}

func (*ConditionalExprContext) IsConditionalExprContext() {}

func NewConditionalExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConditionalExprContext {
	var p = new(ConditionalExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VALIDATORParserRULE_conditionalExpr

	return p
}

func (s *ConditionalExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ConditionalExprContext) ComparingExpr() IComparingExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparingExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparingExprContext)
}

func (s *ConditionalExprContext) QUESTION_MARK() antlr.TerminalNode {
	return s.GetToken(VALIDATORParserQUESTION_MARK, 0)
}

func (s *ConditionalExprContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ConditionalExprContext) COLON() antlr.TerminalNode {
	return s.GetToken(VALIDATORParserCOLON, 0)
}

func (s *ConditionalExprContext) ConditionalExpr() IConditionalExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConditionalExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConditionalExprContext)
}

func (s *ConditionalExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConditionalExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConditionalExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.EnterConditionalExpr(s)
	}
}

func (s *ConditionalExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.ExitConditionalExpr(s)
	}
}

func (s *ConditionalExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VALIDATORVisitor:
		return t.VisitConditionalExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VALIDATORParser) ConditionalExpr() (localctx IConditionalExprContext) {
	localctx = NewConditionalExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, VALIDATORParserRULE_conditionalExpr)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		p.ComparingExpr()
	}
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == VALIDATORParserQUESTION_MARK {
		{
			p.SetState(62)
			p.Match(VALIDATORParserQUESTION_MARK)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(63)
			p.Expr()
		}
		{
			p.SetState(64)
			p.Match(VALIDATORParserCOLON)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(65)
			p.ConditionalExpr()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IComparingExprContext is an interface to support dynamic dispatch.
type IComparingExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AddingExpr() IAddingExprContext
	CompareOperator() ICompareOperatorContext
	ComparingExpr() IComparingExprContext

	// IsComparingExprContext differentiates from other interfaces.
	IsComparingExprContext()
}

type ComparingExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyComparingExprContext() *ComparingExprContext {
	var p = new(ComparingExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_comparingExpr
	return p
}

func InitEmptyComparingExprContext(p *ComparingExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_comparingExpr
}

func (*ComparingExprContext) IsComparingExprContext() {}

func NewComparingExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ComparingExprContext {
	var p = new(ComparingExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VALIDATORParserRULE_comparingExpr

	return p
}

func (s *ComparingExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ComparingExprContext) AddingExpr() IAddingExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAddingExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAddingExprContext)
}

func (s *ComparingExprContext) CompareOperator() ICompareOperatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICompareOperatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICompareOperatorContext)
}

func (s *ComparingExprContext) ComparingExpr() IComparingExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparingExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparingExprContext)
}

func (s *ComparingExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ComparingExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ComparingExprContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.EnterComparingExpr(s)
	}
}

func (s *ComparingExprContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(VALIDATORListener); ok {
		listenerT.ExitComparingExpr(s)
	}
}

func (s *ComparingExprContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case VALIDATORVisitor:
		return t.VisitComparingExpr(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *VALIDATORParser) ComparingExpr() (localctx IComparingExprContext) {
	localctx = NewComparingExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, VALIDATORParserRULE_comparingExpr)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		p.addingExpr(0)
	}
	p.SetState(73)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1008) != 0 {
		{
			p.SetState(70)
			p.CompareOperator()
		}
		{
			p.SetState(71)
			p.ComparingExpr()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAddingExprContext is an interface to support dynamic dispatch.
type IAddingExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MultiplyingExpr() IMultiplyingExprContext
	AddingExpr() IAddingExprContext
	PLUS() antlr.TerminalNode
	MINUS() antlr.TerminalNode

	// IsAddingExprContext differentiates from other interfaces.
	IsAddingExprContext()
}

type AddingExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAddingExprContext() *AddingExprContext {
	var p = new(AddingExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_addingExpr
	return p
}

func InitEmptyAddingExprContext(p *AddingExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = VALIDATORParserRULE_addingExpr
}

func (*AddingExprContext) IsAddingExprContext() {}

func NewAddingExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AddingExprContext {
	var p = new(AddingExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = VALIDATORParserRULE_addingExpr

	return p
}

func (s *AddingExprContext) GetParser() antlr.Parser { return s.parser }

func (s *AddingExprContext) MultiplyingExpr() IMultiplyingExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMultiplyingExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMultiplyingExprContext)
}
